--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,9 @@
 <div id="app">
     <p>{{ message }}</p>
 </div>
-
+<div>
+    <a href="/signup">회원가입</a>
+</div>
 <div id="main-content" class="container">
     <div class="row">
         <div class="col-md-6">
