[fix] - security 프레임워크에 기반인 filter, manager, provider, details 만들기로 했음 지금은 provider 만들었고 manager랑 filter 만들고 url 맵핑하면 된다. - 로그인,회원가입 페이지 UI 멋진걸로 교체함

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,18 +14,18 @@
 
 
     <div class="container">
-        <center>
+        <div style="text-align: center;">
             <div class="middle">
                 <div id="login">
 
-                    <form method="post" action="/user/signup">
+                    <form action="/loginProcess" method="post">
 
                         <fieldset class="clearfix">
 
-                            <p><span class="fa fa-user"></span><input type="text" id="userId" Placeholder="Username"
-                                                                      required></p>
+                            <p><span class="fa fa-user"></span><input type="text" id="username" name="username"
+                                                                      Placeholder="Username" required></p>
                             <!-- JS because of IE support; better: placeholder="Username" -->
-                            <p><span class="fa fa-lock"></span><input type="password" id="userPasswd"
+                            <p><span class="fa fa-lock"></span><input type="password" id="password" name="password"
                                                                       Placeholder="Password" required></p>
                             <!-- JS because of IE support; better: placeholder="Password" -->
 
@@ -50,7 +50,7 @@
                 </div>
 
             </div>
-        </center>
+        </div>
     </div>
 
 </div>
